--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,62 @@
 body {
-  background-color: #333;
+  background-color: #7534F9;
   color: white;
 }
 .App{
   text-align: center;
+}
+.taskBg{
+  background-color: #555;
+  border-radius: 6px;
+  margin-bottom: 20px;
+  padding: 10px 140px 10px 15px;
+  text-align: left;
+  font-size: 22px;
+  position: relative;
+
+}
+.taskBg div{
+  display: flex;
+  align-items: center;
+  font-size: 2rem;
+}
+.taskNumber{
+  color: #999;
+  border: 1px solid #999;
+  border-radius: 50%;
+  width: 26px;
+  height: 26px;
+  display: flex;
+  text-align: center;
+  font-size: 14px;
+  margin-right: 8px;
+  align-items: center;
+  justify-content: center;
+}
+.taskBg  .taskText{
+  flex: 1;
+}
+.taskBg .done .taskText{
+  text-decoration: line-through;
+  opacity: 0.3;
+  
+}
+
+.iconsWrap {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 15px;
+  width: auto;
+  display: inline-block;
+}
+.taskBg .iconsWrap span{
+  display: inline-block;
+  margin: 0px 10px 0 10px;
+  cursor: pointer;
+  color: white;
+  font-size: 2rem;
+}
+.taskBg .iconsWrap span:hover{
+  color:yellow;
 }
